# country-code-enum

./: .clippy.toml  .env  .pre-commit.sh  .typos.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: feature_serde.rs  feature_sqlx_postgres.rs  lib.rs
